# drspread

./: .gitignore  .lldbinit  CMakeLists.txt  Makefile  README.md  TestDrSpread.c  TestDrSpreadWasm.c  argument_parsing.h  buff_allocator.h  debugging.h  demo.dnd  demo.js  demo.ts  docs.dnd  drp_merge_sort.h  drspread.c  drspread.h  drspread_allocators.c  drspread_allocators.h  drspread_cli.c  drspread_colcache.c  drspread_colcache.h  drspread_evaluate.c  drspread_evaluate.h  drspread_formula_funcs.c  drspread_formula_funcs.h  drspread_fuzz.c  drspread_glue.js  drspread_glue.ts  drspread_parse.c  drspread_parse.h  drspread_tui.c  drspread_types.c  drspread_types.h  drspread_utils.h  drspread_wasm.c  drspread_wasm.h  drt.c  drt.h  fast_float.h  (+18 more)
Bugs/: add-an-atom-table.bug  add-benchmarks.bug  add-cells-outside-of-the-sheet.bug  add-option-to-read-column-names-from-first-line.bug  auto-adjusting-column-refs.bug  better-caching.bug  conditional-formatting.bug  cross-sheet-dependencies.bug  dependency-tracking.bug  filtering.bug  have-evaluatestring-support.bug  hiding-columns.bug  horizontal-scroll-sucks.bug  insert-column-shortcut.bug  js-reference-types.bug  old-column-aliases-arent-removed.bug  sorting.bug  string-concatenation.bug
Bugs/Resolved/: add-a-way-to-refer-to-this-row.bug  add-an-atom-table.bug  add-cells-outside-of-the-sheet.bug  add-if.bug  add-option-to-read-column-names-from-first-line.bug  better-caching.bug  cross-sheet-dependencies.bug  cross-sheet-syntax.bug  have-evaluatestring-return-a-tagged-union.bug  have-evaluatestring-support.bug  horizontal-scroll-sucks.bug  old-column-aliases-arent-removed.bug  string-concatenation.bug  support-dollar-in-trad-cell-refs.bug  two-letter-column-names-dont-work.bug
Bugs/WontFix/: js-reference-types.bug
Wasm/: allstd.h  assert.h  errno.h  jsinter.h  limits.h  malloc.h  math.h  stb_sprintf.c  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  unistd.h
Wasm/sys/: ioctl.h  stat.h
d/: arm_acle.d
